syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.um.sisdist.backend.grpc";

package es.um.sisdist.backend.grpc;

service GrpcService
{
    rpc Ping(PingRequest) returns (PingResponse);
	rpc mapReduce(RPCMapReduceRequest) returns (RPCMapReduceRequest);
}

message PingRequest
{
	int32 v = 1;
}

message PingResponse
{
	int32 v = 1;
}

message RPCMapReduceRequest
{
	string map = 1;
	string reduce = 2;
	string out_db = 3;
	string in_db = 4;
	string user = 5;
}
